tests/correct/strict.vrv
// RUN: %verve | %check
(fn f() {
  print("1") // CHECK-L: "1"
  print("2") // CHECK-L: "2"
})()
