tests/errors/unknown_type.vrv
fn f() -> foo { }
print(f())
